@@ -1,3 +1,8 @@
+2010-08-23  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/modelMatrix.R (model.Matrix, glm4): use argument
+	'drop.unused.levels' (and depend on Matrix version *-44).
+
 2010-08-10  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* NAMESPACE:
